--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -105,10 +105,7 @@
 
 
   {{!-- Test div for us to view data in --}}
-  <div id="test-div-view">
-    <h3 id="test-title-view"></h3>
-    <div id="test-data-view"></div>
-  </div>
+  <canvas id="chart-display"></canvas>
   {{!-- End test div --}}
 
 
