--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,16 +3,22 @@
 
 <head>
   <meta charset="utf-8">
+
   {{!-- CSS --}}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
+
   {{!-- SCRIPTS --}}
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0" defer></script>
   <script src="/js/index.js" defer></script>
   <script src="/js/metrics.js" defer></script>
+  <script src="/js/figures.js" defer></script>
+
   <title>fieldPET</title>
+
 </head>
 
 <body>
