Replace slim jQuery with full jQuery

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,13 +5,27 @@
   <meta charset="utf-8">
 
   {{!-- CSS --}}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  {{!-- Materialize CSS --}}
+  <link rel='stylesheet'
+    href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css'
+    integrity='sha384-5KZdSYqynSzIjQGS2M1O3HW6HVDBjfNx0v5Y2eQuE3vvQ9NTiiPK9/GWc0yYCrgw'
+    crossorigin='anonymous'/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
 
   {{!-- SCRIPTS --}}
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
+
+  {{!-- jQuery (full build required for $.ajax) --}}
+  <script defer src='https://code.jquery.com/jquery-3.3.1.min.js'
+    integrity='sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT'
+    crossorigin='anonymous'></script>
+
+  {{!-- Materialize CSS --}}
+  <script defer
+    src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'
+    integrity='sha384-ZOED+d9HxogEQwD+jFvux96iGQR9TxfJO+mPF2ZS0TuKH6eWrmvPsDpO6I0OWdiX'
+    crossorigin='anonymous'></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0" defer></script>
   <script src="/js/index.js" defer></script>
   <script src="/js/metrics.js" defer></script>
