added condition score modal and updated test keys in the metric js file

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -123,3 +123,12 @@
     </form>
   </div>
 </div>
+
+{{!-- CONDITION MODAL --}}
+<div id="conditionModal" class="modal">
+  <div class="modal-content">
+    <h1>Ecological Condition</h1>
+    {{!-- eventually, let's add an image or icon for the image scores --}}
+    <h3 id="condition-text"></h3>
+  </div>
+</div>
