chart testing framework laid out

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -102,14 +102,23 @@
 
 <div id="metricsTab" class="container">
   <p>Charts and Stuff Go Here.</p>
-  <button id="test-chart-btn">Test Chart</button>
 
+  {{!-- test chart modal --}}
+  <button id="test-chart-btn" class="chart-btn waves-effect waves-light red  lighten-2 btn">Test Chart</button>
 
-  {{!-- Test div for us to view data in --}}
+  {{!-- get all and present either in table or JSON --}}
+  <button id="get-all-btn" class="chart-btn waves-effect waves-light btn">All Data</button>
   
-  {{!-- End test div --}}
+  {{!-- get all stonefly data across time for all sites --}}
+  <button id="all-SF-btn" class="chart-btn waves-effect waves-light btn">Stonefy Counts</button>
 
+  <br>
+  {{!-- calculate condition matrix for the james river for every instance, and then graph it --}}
+  <button id="lower-james-condition-btn" class="chart-btn waves-effect waves-light btn">Lower James Condition</button>
 
+  {{!-- get all mayfly data for james river across time --}}  
+  <button id="lower-james-MF-btn" class="chart-btn waves-effect waves-light btn">Lower James Mayflies</button>
+  
 </div>
 
 {{!-- LOGIN MODAL --}}
