--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -68,6 +68,13 @@ input::-webkit-inner-spin-button {
   background-color: rgba(252, 65, 84, 0.1);
 }
 
+/*You can do whatever you want with this, I'm not super familiar w/ materialize*/
+.chart-btn  {
+  margin: 1%;
+  width: 250px;
+  height: 50px;
+}
+
 /* 
 /   IDS
 */
