--- a/views/partials/bugInputs.handlebars
+++ b/views/partials/bugInputs.handlebars
@@ -1,3 +1,5 @@
-<button class="dec">-</button>
-<input name="{{name}}" type="number" placeholder="0" min="0" max="10000">
-<button class="inc">+</button>
+<div class="bugTabTop">
+    <button class="dec">-</button>
+    <input name="{{name}}" type="number" placeholder="0" min="0" max="10000">
+    <button class="inc">+</button>
+</div>
