--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,18 +15,11 @@
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
 
   {{!-- SCRIPTS --}}
-
-  {{!-- jQuery (full build required for $.ajax) --}}
-  <script defer src='https://code.jquery.com/jquery-3.3.1.min.js'
-    integrity='sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT'
-    crossorigin='anonymous'></script>
-
-  {{!-- Materialize CSS --}}
-  <script defer
-    src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'
-    integrity='sha384-ZOED+d9HxogEQwD+jFvux96iGQR9TxfJO+mPF2ZS0TuKH6eWrmvPsDpO6I0OWdiX'
-    crossorigin='anonymous'></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0" defer></script>
+  <script src="/js/buginfoPane.js" defer></script>
   <script src="/js/index.js" defer></script>
   <script src="/js/metrics.js" defer></script>
   <script src="/js/figures.js" defer></script>
