--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -154,8 +154,9 @@
     <h1>LOGIN</h1>
 
     <form id="loginForm">
-      <input type="text" name="Username" placeholder="Username">
-      <input type="password" name="Password" placeholder="Password">
+      <input type="text" name="username" placeholder="Username">
+      <input type="password" name="password" placeholder="Password">
+      <p id="message-text" class="warning-message"></p>
       <input type="submit" value="Submit">
     </form>
   </div>
