--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0" defer></script>
-  <script src="/js/buginfoPane.js" defer></script>
+  <script src="/js/bugInfoPane.js" defer></script>
   <script src="/js/index.js" defer></script>
   <script src="/js/metrics.js" defer></script>
   <script src="/js/figures.js" defer></script>
