--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -157,9 +157,9 @@
       <input type="text" name="username" placeholder="Username">
       <input type="password" name="password" placeholder="Password">
       {{!-- we will need to format this date --}}
-      <input type="date" name="collection-date" placeholder="Select Collection Date">
+      <input type="date" name="fieldDate" placeholder="Select Collection Date">
       <label>Browser Select</label>
-        <select id="options" class="browser-default">
+        <select id="site-options" name="site" class="browser-default">
             <option value="" disabled selected>Select a Site</option>
         </select>
       <p id="message-text" class="warning-message"></p>
