Remove test chart now that we have charts working

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -124,7 +124,7 @@
 </div>
 
 <div id="metricsTab" class="container">
-  <p>Raw data in JSON format</p>
+  <p>Raw data (JSON format)</p>
 
   {{!-- Get all and present either in table or JSON --}}
   <button id="get-all-btn" class="chart-btn waves-effect waves-light btn">All Data</button>
@@ -143,12 +143,6 @@
 
   {{!-- Example:  Calculate condition matrix for the James River for every instance, and then graph it --}}
   <button id="lower-james-condition-btn" class="chart-btn waves-effect waves-light btn">Condition:  Lower James</button>
-
-  <p>Test chart (development only)</p>
-
-  {{!-- Test chart modal --}}
-
-  <button id="test-chart-btn" class="chart-btn waves-effect waves-light red  lighten-2 btn">Test Chart</button>
 
 </div>
 
