--- a/views/partials/bugInputs.handlebars
+++ b/views/partials/bugInputs.handlebars
@@ -1,6 +1,14 @@
+{{#if name}}
 <div class="image" data-name="{{name}}" style="background-image: url('./img/bugs/{{name}}.png')"></div>
 <div class="bugTabTop">
     <button class="dec">-</button>
     <input name="{{name}}" type="number" placeholder="0" min="0" max="10000">
     <button class="inc">+</button>
 </div>
+{{else}}
+<div class="bugTabTop">
+    <button class="dec">-</button>
+    <input name="{{noImage}}" type="number" placeholder="0" min="0" max="10000">
+    <button class="inc">+</button>
+</div>
+{{/if}}
