--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -124,7 +124,7 @@
   <p>Raw data (JSON format)</p>
 
   {{!-- Get all and present either in table or JSON --}}
-  <button id="get-all-btn" class="chart-btn waves-effect waves-light btn">All Data</button>
+  <button id="get-all-btn" class="chart-btn waves-effect waves-light btn">Bug Data API</button>
 
   <p>Bug counts by organism</p>
 
@@ -139,7 +139,7 @@
   <p>Computed metrics</p>
 
   {{!-- Example:  Calculate condition matrix for the James River for every instance, and then graph it --}}
-  <button id="lower-james-condition-btn" class="chart-btn waves-effect waves-light btn">Condition:  Lower James</button>
+  <button id="site-condition-btn" class="chart-btn waves-effect waves-light btn">Site Condtion</button>
 
 </div>
 
