--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -134,7 +134,7 @@
   <p>Aggregate bug counts by watershed</p>
 
   {{!-- Example:  Get all midge counts over time for Difficult Run --}}
-  <button id="MI-x-Difficult-Run-btn" class="chart-btn waves-effect waves-light btn">Midges × Difficult Run</button>
+  <button id="join-table-btn" class="chart-btn waves-effect waves-light btn">Midges × Difficult Run</button>
 
   <p>Computed metrics</p>
 
