--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -29,12 +29,12 @@
 /* 
 /   ELEMENTS
 */
-html {
+html, body {
   height: 100%;
 }
 
 body {
-  background-color: #e1eff2;
+  min-height: 100%;
   padding: 10px 0px 0px 0px;
   background-image: linear-gradient(to bottom, #e1eff2, #b7d5bb 80%, #80b387 99%);
 }
@@ -277,5 +277,5 @@ h5 {
   width: 100%;
   height: 130px;
   z-index: -1;
-  background-image: url("../img/bottom\ border.png");
+  background-image: url("../img/bottomBorder.png");
 }
