--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,8 @@
   <div id="nav">
     <h1>fieldPET</h1>
     <ul class="tabs">
-      <li class="tab col s3"><a href="#dataEntryTab">Data Entry</a></li>
-      <li class="tab col s3"><a href="#metricsTab">Metrics</a></li>
+      <li class="tab"><a href="#dataEntryTab">Data Entry</a></li>
+      <li class="tab"><a href="#metricsTab">Metrics</a></li>
     </ul>
   </div>
 </header>
