--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <header class="container">
   <div id="nav">
     <h1>fieldPET</h1>
-    <ul class="tabs">
+    <ul id="navTabs" class="tabs">
       <li class="tab"><a href="#dataEntryTab">Data Entry</a></li>
       <li class="tab"><a href="#metricsTab">Metrics</a></li>
     </ul>
