Added bug to nav bar

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,6 +6,7 @@
       <li class="tab"><a href="#metricsTab">Metrics</a></li>
     </ul>
   </div>
+  <img src="./img/mayfly.png" height="16%" width="16%">
 </header>
 
 <div id="dataEntryTab" class="container">
