--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,15 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-
-  {{!-- CSS --}}
+  <link rel="shortcut icon" type="image/png" href="./img/favicon.ico"/>
 
   {{!-- Materialize CSS --}}
-  <link rel='stylesheet'
-    href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css'
-    integrity='sha384-5KZdSYqynSzIjQGS2M1O3HW6HVDBjfNx0v5Y2eQuE3vvQ9NTiiPK9/GWc0yYCrgw'
-    crossorigin='anonymous'/>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css'
+    integrity='sha384-5KZdSYqynSzIjQGS2M1O3HW6HVDBjfNx0v5Y2eQuE3vvQ9NTiiPK9/GWc0yYCrgw' crossorigin='anonymous' />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+
+  {{!-- CSS --}}
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
 
   {{!-- SCRIPTS --}}
@@ -33,4 +32,5 @@
 
 <div id="bottomBorder">
 </div>
+
 </html>
