read me and credits modal updates

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -183,10 +183,10 @@
 <div id="creditsModal" class="modal">
   <div class="modal-content">
     <h4>Credits:</h4>
-    <p><b>Data Processing, Analysis, and Metrics:</b> Kensey Barker (<a href="https://github.com/kenzrad" target="_blank">@kenzrad</a>)</p>
-    <p><b>Visualization, Integration:</b> Austin Kim (<a href="https://github.com/powerpcg5" target="_blank">@powerpcg5</a>)</p>
-    <p><b>Database, Data Integration:</b> Molly Levine (<a href="https://github.com/levinemr2" target="_blank">@levinemr2</a>)</p>
-    <p><b>Front End Design:</b> Thomas Smith (<a href="https://github.com/Slowpossum" target="_blank">@Slowpossum</a>)</p>
+    <p><b>Front End Development and Design, Logo and Icon Art, Optimization:</b> Thomas Smith (<a href="https://github.com/Slowpossum" target="_blank">@Slowpossum</a>)</p>
+    <p><b>Back End Framework and Data Processing, Charts integration, Metrics and Analysis:</b> Kensey Barker (<a href="https://github.com/kenzrad" target="_blank">@kenzrad</a>)</p>
+    <p><b>API, Charts Integration:</b> Molly Levine (<a href="https://github.com/levinemr2" target="_blank">@levinemr2</a>)</p>
+    <p><b>Data File Formatting, Research:</b> Austin Kim (<a href="https://github.com/powerpcg5" target="_blank">@powerpcg5</a>)</p>
     <br>
     <p>The invaluable information and pictures of <a href="https://www.iwla.org/" target="_blank">The Izaac Walton League of America</a></p>
   </div>
